# algorithms-rust

./: Cargo.toml  README.md
src/solution/: mod.rs  s2530.rs  s2938_separate_black_white.rs
